--- a/style.css
+++ b/style.css
@@ -57,6 +57,128 @@ body {
     background-color: #ffffff;
 }
 
+.shirts {
+    width: 385px;
+    height: 159px;
+
+    position: relative;
+    top: 38px;
+    left: 122px;
+}
+.shirts, .collar, .tissue h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21px;
+    color: #232323;
+}
+.containerShirt {
+    width: 385px;
+    height: 130px;
+
+    position: absolute;
+    top: 29px;
+    left: 0px;
+
+    display: flex;
+    justify-content: space-between;
+}
+.model {
+    width: 100px;
+    height: 130px;
+
+    background-color: #ffffff;
+}
+.space {
+    width: 100px;
+    height: 100px;
+
+    border: none;
+    border-radius: 100px;
+    overflow: hidden;
+    background-color: #c4c4c4;
+}
+.model p {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    text-align: center;
+
+    color: #232323;
+    margin-top: 8px;
+}
+
+.collar, .tissue {
+width: 385px;
+height: 159px;
+margin-top: 31px;
+
+position: relative;
+top: 38px;
+left: 122px;
+}
+
+.reference {
+    width: 396px;
+    height: 70px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    position: relative;
+    top: 65px;
+    left: 122px;
+}
+.reference h3 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21px;
+    color: #232323;
+}
+.reference input {
+    width: 396px;
+    height: 40px;
+
+    border-radius: 10px;
+    padding-left: 16px;
+    background-color: #f2f2f2;
+    border: none;
+}
+.reference ::placeholder {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #818181;
+}
+
+.confirmBtn {
+    width: 398px;
+    height: 40px;
+
+    position: relative;
+    top: 90px;
+    left: 122px;
+
+    border-radius: 10px;
+    background-color: #c4c4c4;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.confirmBtn h4 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: #fcfcfc;
+}
+
 .rightContent {
     width: 49%;
     height: 100%;
@@ -158,7 +280,7 @@ body {
     justify-content: space-between;
     overflow-x: scroll;
 }
-.shirts {
+.models {
     width: 216px;
     min-width: 216px;
     height: 100%;
