--- a/style.css
+++ b/style.css
@@ -345,3 +345,34 @@ left: 122px;
 .confirmSelected {
     background-color: #404eed;
 }
+
+.successContent {
+    width: 435px;
+    height: 634px;
+    margin-top: 74px;
+    margin-left: 130px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    justify-content: center;
+}
+.successContent h5 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+}
+.successContent img {
+    width: 435px;
+    height: 523px;
+}
+.successContent h6 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: #404eed;
+    text-align: center;
+}
