--- a/style.css
+++ b/style.css
@@ -346,8 +346,18 @@ left: 122px;
 .confirmSelected {
     background-color: #404eed;
 }
+.errorContent {
+    width: 435px;
+    height: 634px;
+    margin-top: 0px;
+    margin-left: 130px;
 
-.successContent, .errorContent {
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    justify-content: center;
+}
+.successContent {
     width: 435px;
     height: 634px;
     margin-top: 74px;
@@ -376,4 +386,16 @@ left: 122px;
     line-height: 23px;
     color: #404eed;
     text-align: center;
+}
+.successContent p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: #404eed;
+    text-align: center;
+}
+.escondido {
+    width: 0px;
+    height: 0px;
 }
